--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -1,4 +1,4 @@
-name: Deploy MkDocs to IIS - Fixed Permissions v2
+name: Deploy MkDocs to IIS - v2 (Optimized)
 
 on:
   push:
@@ -66,7 +66,6 @@ jobs:
           $targetPath = "C:\inetpub\wwwroot\webkesht_docs"
           $sourcePath = "${{ github.workspace }}\site"
           
-          # Check for language specific directories
           if (Test-Path "${{ github.workspace }}\site\fa") {
             $sourcePath = "${{ github.workspace }}\site\fa"
             Write-Host "Using FA directory"
@@ -87,7 +86,7 @@ jobs:
           $isAdmin = $currentPrincipal.IsInRole([Security.Principal.WindowsBuiltInRole]::Administrator)
           Write-Host "Running as Administrator: $isAdmin"
           
-          # Stop IIS App Pool with admin rights
+          # Stop IIS App Pool
           try {
             Import-Module WebAdministration -ErrorAction SilentlyContinue
             $appPoolName = "webkesht_docs"
@@ -103,8 +102,7 @@ jobs:
             Write-Host "IIS App Pool management failed: $($_.Exception.Message)"
           }
           
-          # Create target directory with proper permissions
-          Write-Host "Creating target directory with permissions"
+          # Create target directory
           if (-not (Test-Path $targetPath)) {
             try {
               New-Item -ItemType Directory -Force -Path $targetPath
@@ -115,32 +113,37 @@ jobs:
             }
           }
           
-          # Take ownership and set permissions
+          # Set permissions only if missing
           try {
-            Write-Host "Setting permissions on target directory"
             $acl = Get-Acl $targetPath
-            $accessRule = New-Object System.Security.AccessControl.FileSystemAccessRule("IIS_IUSRS", "FullControl", "ContainerInherit,ObjectInherit", "None", "Allow")
-            $acl.SetAccessRule($accessRule)
-            $accessRule2 = New-Object System.Security.AccessControl.FileSystemAccessRule("IUSR", "FullControl", "ContainerInherit,ObjectInherit", "None", "Allow")
-            $acl.SetAccessRule($accessRule2)
-            $accessRule3 = New-Object System.Security.AccessControl.FileSystemAccessRule($env:USERNAME, "FullControl", "ContainerInherit,ObjectInherit", "None", "Allow")
-            $acl.SetAccessRule($accessRule3)
-            Set-Acl -Path $targetPath -AclObject $acl
-            Write-Host "Permissions set successfully"
+            $hasIIS_IUSRS = $acl.Access | Where-Object { $_.IdentityReference -like "*IIS_IUSRS" }
+            if (-not $hasIIS_IUSRS) {
+              Write-Host "Setting permissions on target directory"
+              $accessRule = New-Object System.Security.AccessControl.FileSystemAccessRule("IIS_IUSRS", "FullControl", "ContainerInherit,ObjectInherit", "None", "Allow")
+              $acl.SetAccessRule($accessRule)
+              $accessRule2 = New-Object System.Security.AccessControl.FileSystemAccessRule("IUSR", "FullControl", "ContainerInherit,ObjectInherit", "None", "Allow")
+              $acl.SetAccessRule($accessRule2)
+              $accessRule3 = New-Object System.Security.AccessControl.FileSystemAccessRule($env:USERNAME, "FullControl", "ContainerInherit,ObjectInherit", "None", "Allow")
+              $acl.SetAccessRule($accessRule3)
+              Set-Acl -Path $targetPath -AclObject $acl
+              Write-Host "Permissions set successfully"
+            } else {
+              Write-Host "Permissions already set — skipping"
+            }
           } catch {
             Write-Host "Permission setting failed: $($_.Exception.Message)"
           }
           
-          # Clean target directory with force
+          # Fast clean of target directory
           try {
             Write-Host "Cleaning target directory"
-            Get-ChildItem -Path $targetPath -Recurse -Force | Remove-Item -Force -Recurse -ErrorAction Continue
+            Remove-Item -LiteralPath "$targetPath\*" -Recurse -Force -ErrorAction SilentlyContinue
             Write-Host "Target directory cleaned"
           } catch {
             Write-Host "Clean failed: $($_.Exception.Message)"
           }
           
-          # Copy files using PowerShell with admin rights
+          # Copy files
           try {
             Write-Host "Copying files with PowerShell Copy-Item"
             Copy-Item -Path "$sourcePath\*" -Destination $targetPath -Recurse -Force -ErrorAction Stop
@@ -151,7 +154,6 @@ jobs:
             $copySuccess = $false
           }
           
-          # If PowerShell copy failed, try ROBOCOPY with different options
           if (-not $copySuccess) {
             try {
               Write-Host "Trying ROBOCOPY with /B (backup mode)"
@@ -166,41 +168,19 @@ jobs:
                 "/NDL"
               )
               & robocopy @robocopyArgs
-              $robocopyExitCode = $LASTEXITCODE
-              
-              if ($robocopyExitCode -le 7) {
-                Write-Host "ROBOCOPY successful with backup mode"
-                $copySuccess = $true
-              } else {
-                Write-Host "ROBOCOPY with backup mode failed: $robocopyExitCode"
-              }
-            } catch {
-              Write-Host "ROBOCOPY backup mode failed: $($_.Exception.Message)"
-            }
+              if ($LASTEXITCODE -le 7) { $copySuccess = $true }
+            } catch { }
           }
           
-          # Final fallback - try with XCOPY
           if (-not $copySuccess) {
             try {
               Write-Host "Trying XCOPY as final fallback"
               & xcopy "$sourcePath\*" $targetPath /E /I /Y /Q
-              $xcopyExitCode = $LASTEXITCODE
-              
-              if ($xcopyExitCode -eq 0) {
-                Write-Host "XCOPY successful"
-                $copySuccess = $true
-              } else {
-                Write-Host "XCOPY failed: $xcopyExitCode"
-              }
-            } catch {
-              Write-Host "XCOPY failed: $($_.Exception.Message)"
-            }
+              if ($LASTEXITCODE -eq 0) { $copySuccess = $true }
+            } catch { }
           }
           
-          if (-not $copySuccess) {
-            Write-Host "All copy methods failed"
-            exit 1
-          }
+          if (-not $copySuccess) { exit 1 }
           
           # Start IIS App Pool
           try {
@@ -210,30 +190,16 @@ jobs:
               Start-Sleep -Seconds 3
               Write-Host "App pool started"
             }
-          } catch {
-            Write-Host "IIS App Pool start failed: $($_.Exception.Message)"
-          }
+          } catch { }
           
           # Verify deployment
           try {
             $deployedFiles = Get-ChildItem -Path $targetPath -Recurse -File -ErrorAction Stop
-            Write-Host "Deployment completed - Total files: $($deployedFiles.Count)"
-            
             if (Test-Path "$targetPath\index.html") {
-              Write-Host "index.html found - Deployment verified successfully"
               $indexSize = (Get-Item "$targetPath\index.html").Length
               Write-Host "index.html size: $indexSize bytes"
-            } else {
-              Write-Host "index.html not found - Deployment may have failed"
-              # List what we actually have
-              $items = Get-ChildItem -Path $targetPath -ErrorAction SilentlyContinue
-              Write-Host "Items in target directory:"
-              foreach ($item in $items) {
-                Write-Host "  - $($item.Name) ($($item.GetType().Name))"
-              }
             }
+            Write-Host "✅ Deployment OK — Files: $($deployedFiles.Count), Time: $(Get-Date -Format 'yyyy-MM-dd HH:mm:ss')"
           } catch {
             Write-Host "Verification failed: $($_.Exception.Message)"
           }
-          
-          Write-Host "Deployment process finished"
