--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -4,11 +4,11 @@ authors:
     description: Creator
     avatar: https://avatars.githubusercontent.com/u/76643021
     url: https://github.com/salehin90
-  alexvoss:
-    name: Alex Voss
+  parisa:
+    name: پریسا رضائی
     description: Solutions Architect
-    avatar: https://avatars.githubusercontent.com/u/4134224
-    url: https://github.com/alexvoss
+    avatar: https://avatars.githubusercontent.com/u/207300412
+    url: https://github.com/Parisa-86
   katharinalisalin:
     name: Kathi
     description: Communications
