ویرایش نام نویسندگان

--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -6,11 +6,11 @@ authors:
     url: https://github.com/salehin90
   parisa:
     name: پریسا رضائی
-    description: Solutions Architect
+    description: Water Engineer
     avatar: https://avatars.githubusercontent.com/u/207300412
     url: https://github.com/Parisa-86
-  katharinalisalin:
-    name: Kathi
-    description: Communications
-    avatar: https://avatars.githubusercontent.com/u/105352741
-    url: https://github.com/katharinalisalin
+  mitra:
+    name: میترا زهتابیان
+    description: Water Engineer
+    avatar: 
+    url: 
