--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # اطلاعات کلی سایت
-site_name: مستندات وب‌کشت
-site_url: https://docs.webkesht.com/
+site_name: آبیاری هوشمند با وب‌کشت
+site_url: https://webkesht.com/
 site_description: 'مستندات جامع سامانه هوشمند مدیریت و آبیاری وب‌کشت'
 site_author: 'تیم وب‌کشت'
 
