اضافه کردن تایتل و دیسکرپشن به همه فایل های اصلی جهت بهبود متدیتا و سئو

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 # اطلاعات کلی سایت
 site_name: آبیاری هوشمند با وب‌کشت
 site_url: https://webkesht.com/
-site_description: 'مستندات جامع سامانه هوشمند مدیریت و آبیاری وب‌کشت'
+site_description: 'مستندات جامع سامانه هوشمند مدیریت آبیاری وب‌کشت'
 site_author: 'تیم وب‌کشت'
 
 # مسیر خروجی
