--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 # اطلاعات کلی سایت
-site_name: آبیاری هوشمند با وب‌کشت
+site_name:  آبیاری هوشمند با وب کشت
 site_url: https://webkesht.com/
 site_description: 'مستندات جامع سامانه هوشمند مدیریت آبیاری وب‌کشت'
 site_author: 'تیم وب‌کشت'
@@ -113,6 +113,7 @@ nav:
   - شروع سریع:
     - راهنمای جامع کار با سامانه : quick-start/Guide.md
   - راهنمای کاربری:
+    - user-guide/index.md
     - راهنمای جامع بافت خاک: user-guide/Soil.md
     - راهنمای جامع پوشش گیاهی: user-guide/Vegetation.md
     - راهنمای جامع سیستم آبیاری: user-guide/Irrigation.md
